<resources>
    <string name="Inventory_label">盘存标签</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="access_area">访问区域:</string>
    <string name="access_code">访问密码(HEX):</string>
    <string name="access_or_password_error">访问标签或密码错误</string>
    <string name="access_password_area">访问密码区</string>
    <string name="access_tag">存取标签</string>
    <string name="alert_dialog_title">提示</string>
    <string name="ant_1">天线1</string>
    <string name="ant_10">天线10</string>
    <string name="ant_11">天线11</string>
    <string name="ant_12">天线12</string>
    <string name="ant_13">天线13</string>
    <string name="ant_14">天线14</string>
    <string name="ant_15">天线15</string>
    <string name="ant_16">天线16</string>
    <string name="ant_2">天线2</string>
    <string name="ant_3">天线3</string>
    <string name="ant_4">天线4</string>
    <string name="ant_5">天线5</string>
    <string name="ant_6">天线6</string>
    <string name="ant_7">天线7</string>
    <string name="ant_8">天线8</string>
    <string name="ant_9">天线9</string>
    <string name="ant_num_error">返回天线号有误</string>
    <string name="antenna">天线 </string>
    <string name="antenna_count">天线数:</string>
    <string name="antenna_missing_error">天线未连接</string>
    <string name="antenna_number">天线号</string>
    <string name="antenna_port">天线端口:</string>
    <string name="anti">天线</string>
    <string name="app_in_recharge_mode">设备进入供电模式，App已禁止操作，如需操作可退出供电模式或者通过设备盘存键进行盘存</string>
    <string name="app_name">盘存</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_to_exit">确认要退出吗？</string>
    <string name="auth_password_error">认证密码错误</string>
    <string name="barcode_data">二维码数据:</string>
    <string name="barcode_module">二维头模块</string>
    <string name="battery_low">电量过低！确认继续盘存？</string>
    <string name="baud_rate">波特率:</string>
    <string name="beep_interval">蜂鸣间隔(ms):</string>
    <string name="ble_connect_success">蓝牙连接成功</string>
    <string name="ble_connection">蓝牙连接</string>
    <string name="ble_disconnect">蓝牙已断开连接</string>
    <string name="ble_error_msg_01">抱歉，蓝牙无法使用！</string>
    <string name="ble_error_msg_02">请先启用蓝牙！</string>
    <string name="ble_error_msg_03">Android 6.0以上使用蓝牙需要位置权限</string>
    <string name="ble_error_msg_04">Android 6.0以上使用蓝牙需打开</string>
    <string name="ble_error_msg_05">已启动使用相同过滤器扫描</string>
    <string name="ble_error_msg_06">无法注册蓝牙扫描应用程序</string>
    <string name="ble_error_msg_07">不支持使用指定参数进行扫描</string>
    <string name="ble_error_msg_08">由于内部错误，扫描失败</string>
    <string name="ble_error_msg_09">由于硬件资源有限，扫描无法启动</string>
    <string name="ble_error_msg_10">Android 7+ 不允许更多扫描。 尝试 %d 秒</string>
    <string name="ble_mac_address">蓝牙MAC地址</string>
    <string name="ble_version">蓝牙版本号</string>
    <string name="block_write">启用块写</string>
    <string name="block_write_label">块写标签</string>
    <string name="board_sn">接口板SN号</string>
    <string name="board_version">接口板版本号</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buffer_is_empty_error">缓存为空</string>
    <string name="cancel">取 消</string>
    <string name="cancel_filter_tag_error">清除过滤失败，请重试</string>
    <string name="cancel_filter_tag_success">清除过滤成功</string>
    <string name="carrier_frequency">载波频率</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_digit">校验位: </string>
    <string name="check_tag">选中标签</string>
    <string name="chinese">中文</string>
    <string name="chn">CHN</string>
    <string name="clear_data">清空数据</string>
    <string name="clear_filter">清除过滤</string>
    <string name="clear_match_error">清除选定失败，请重试</string>
    <string name="clear_match_success">成功清除选定</string>
    <string name="clear_select">清除选定</string>
    <string name="clear_settings">清除设置</string>
    <string name="close">关闭</string>
    <string name="close_module_error">关闭模块失败</string>
    <string name="close_module_success">关闭模块成功</string>
    <string name="cmd_timeout">命令超时(ms):</string>
    <string name="command_execution_time">执行时间:</string>
    <string name="common">普通</string>
    <string name="connect_ble">连接蓝牙</string>
    <string name="connect_now">立即连接</string>
    <string name="connecting">连接中…</string>
    <string name="connection_failed">连接失败</string>
    <string name="connection_type">连接方式</string>
    <string name="copyright_authentication_fail">版权认证未通过</string>
    <string name="crc">CRC</string>
    <string name="cumulative_return_data">返回数据:</string>
    <string name="current_tag">当前标签</string>
    <string name="custom">自定义</string>
    <string name="custom_frequency">自定义频点</string>
    <string name="customized_session_target_inventory">自定义参数盘存标签</string>
    <string name="cw_on_error">打开CW错误</string>
    <string name="cycles_prompt">轮循次数:</string>
    <string name="data">数据</string>
    <string name="data_hex">数据(HEX):</string>
    <string name="data_input">写入数据:</string>
    <string name="data_len">数据长度</string>
    <string name="data_length">数据长度(WORD):</string>
    <string name="data_length_error">数据长度错误</string>
    <string name="data_monitor">数据监控</string>
    <string name="dbm">dBm</string>
    <string name="default_frequency">默认频点</string>
    <string name="delay">延时(ms)</string>
    <string name="desc">说明:</string>
    <string name="desc_detector_1">1.读写标签时系统自动测量天线端口的回波损耗(Return Loss)。</string>
    <string name="desc_detector_2">2.为保护设备，检测到回波损耗大于此阈值将报错并停止读写标签操作。</string>
    <string name="desc_detector_3">3.此阈值越大对天线端口阻抗匹配要求越高，设为0关闭此功能。</string>
    <string name="desc_monza_1">1.只有Impinj Monza系列标签的部分型号支持快速读TID功能。</string>
    <string name="desc_monza_2">2.若标签不支持快速读TID请关闭此功能。</string>
    <string name="destroy_password_area">销毁密码区</string>
    <string name="destroy_password_hex">销毁密码(HEX):</string>
    <string name="destroy_tag">销毁标签</string>
    <string name="device_battery_voltage">设备电池电压</string>
    <string name="dynamic">动态Q</string>
    <string name="english">英语</string>
    <string name="epc">EPC</string>
    <string name="epc_area">EPC区</string>
    <string name="epc_length_change">允许修改EPC长度</string>
    <string name="error">错误</string>
    <string name="ets">ETSI</string>
    <string name="every_sound">每读到一张标签鸣响</string>
    <string name="exe_times">执行次数</string>
    <string name="export_excel">导出Excel</string>
    <string name="export_excel_error">无效操作，没有数据可导出</string>
    <string name="export_fail">导出失败</string>
    <string name="export_success">导出成功</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_to_achieve_desired_output_power">输出达不到指定的输出功率</string>
    <string name="fail_to_get_rn16_from_tag">无法从标签接收RN16</string>
    <string name="fail_with_comma">失败，</string>
    <string name="failed">失败</string>
    <string name="fast_mode">快速</string>
    <string name="find_tag">标签雷达</string>
    <string name="id">ID</string>
    <string name="language_switch">语言切换</string>
    <string name="menu_ant_sensitivity">天线灵敏度</string>
    <string name="menu_ble_module">蓝牙设备</string>
    <string name="menu_inventory_6c">盘存标签</string>
    <string name="menu_reader_beeper">声音设置</string>
    <string name="menu_reader_gpio">读写GPIO</string>
    <string name="menu_reader_identify">读写器识别标识</string>
    <string name="menu_reader_rs_485_hex">读写器地址(HEX)</string>
    <string name="menu_reader_status">读写器状态</string>
    <string name="menu_reader_temperature">工作温度</string>
    <string name="menu_reader_version">固件版本</string>
    <string name="menu_return_loss">测量回波损耗</string>
    <string name="menu_rf_com_link">射频通讯链路</string>
    <string name="menu_rf_output_power">射频输出功率</string>
    <string name="menu_rf_spectrum">射频频谱</string>
    <string name="menu_switch_ant">切换工作天线</string>
    <string name="nav_baud_rate">波特率</string>
    <string name="net_connection">网口连接</string>
    <string name="open">打开</string>
    <string name="operation_log">操作日志</string>
    <string name="otg_connection">OTG连接</string>
    <string name="pc">PC</string>
    <string name="printer_connection">打印机的RFID连接</string>
    <string name="profile_e710_mode103">"Mode 103：DSB,    Tari 6.25uS, Miller 1 640KHz"</string>
    <string name="profile_e710_mode241">"Mode 241：PR-ASK, Tari 20uS,   Miller 4 320KHz"</string>
    <string name="profile_e710_mode244">"Mode 244：PR-ASK, Tari 20uS,   Miller 4 250KHz"</string>
    <string name="profile_e710_mode285">"Mode 285：PR-ASK, Tari 20uS,   Miller 8 160KHz"</string>
    <string name="profile_option0">"配置0  Tari 25uS; FM0 40KHz"</string>
    <string name="profile_option1">"配置1(推荐且为默认)  Tari 25uS; Miller 4 250KHz"</string>
    <string name="profile_option2">"配置2  Tari 25uS; Miller 4 300KHz"</string>
    <string name="profile_option3">"配置3  Tari 6.25uS; FM0 400KHz"</string>
    <string name="read">读取</string>
    <string name="read_temp_tag1">读取温度标签1</string>
    <string name="read_temp_tag2">读取温度标签2</string>
    <string name="refresh_data">清空</string>
    <string name="reset_reader">复位读写器</string>
    <string name="save">保存</string>
    <string name="select_tag">过滤标签</string>
    <string name="serial_connection">串口连接</string>
    <string name="set">设置</string>
    <string name="set_basic_param">基本参数设置</string>
    <string name="set_rf_param">射频参数设置</string>
    <string name="start_read_tag">开始读取标签</string>
    <string name="tag_xy">星沿</string>
    <string name="tag_yh">悦和</string>
    <string name="temperature">温度</string>
    <string name="times">次数</string>
    <string name="un_save">不保存</string>
</resources>