<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_parent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/cv1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" app:layout_constraintTop_toTopOf="parent">
        <RadioGroup android:orientation="horizontal" android:id="@id/radio_group_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginStart="10.0dip">
            <RadioButton android:id="@id/rb_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open" />
            <RadioButton android:id="@id/rb_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/close" android:layout_marginStart="20.0dip" />
        </RadioGroup>
        <RadioGroup android:orientation="horizontal" android:id="@id/radio_group_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginStart="10.0dip">
            <RadioButton android:id="@id/rb_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" />
            <RadioButton android:id="@id/rb_un_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/un_save" android:layout_marginStart="20.0dip" />
        </RadioGroup>
        <Button android:id="@id/btn_get" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:layout_marginBottom="5.0dip" android:text="@string/read" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <Button android:layout_gravity="end|bottom|center" android:id="@id/btn_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/set" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    </androidx.cardview.widget.CardView>
    <TextView android:textColor="@color/gray_2" android:id="@id/tv_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/desc" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:layout_constraintTop_toBottomOf="@id/cv1" />
    <TextView android:textSize="12.0sp" android:textColor="@color/gray_2" android:id="@id/tv_desc_monza_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/desc_monza_1" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintTop_toBottomOf="@id/tv_desc" />
    <TextView android:textSize="12.0sp" android:textColor="@color/gray_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/desc_monza_2" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintTop_toBottomOf="@id/tv_desc_monza_1" />
</androidx.constraintlayout.widget.ConstraintLayout>
