<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/cl_parent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:id="@id/tvShowTips" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="当前芯片不允许配置链路!" />
    <LinearLayout android:id="@id/llGetSet" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
        <Button android:id="@id/btn_get" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/read" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <Button android:id="@id/btn_set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/set" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <CheckBox android:id="@id/cbDRMode" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="DRMode" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:id="@id/cv1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <RadioGroup android:orientation="vertical" android:id="@id/radio_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:layout_marginStart="10.0dip">
                    <RadioButton android:id="@id/rb_option0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_option0" />
                    <RadioButton android:id="@id/rb_option1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_option1" />
                    <RadioButton android:id="@id/rb_option2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_option2" />
                    <RadioButton android:id="@id/rb_option3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_option3" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:id="@id/cvE710" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <RadioGroup android:orientation="vertical" android:id="@id/rgE710" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
                    <RadioButton android:textSize="13.0dip" android:id="@id/rbE710_103" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_e710_mode103" />
                    <RadioButton android:textSize="13.0dip" android:id="@id/rbE710_241" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_e710_mode241" />
                    <RadioButton android:textSize="13.0dip" android:id="@id/rbE710_244" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_e710_mode244" />
                    <RadioButton android:textSize="13.0dip" android:id="@id/rbE710_285" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile_e710_mode285" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
